--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -8,7 +8,7 @@
 
 
 <form id="account" method="post">
-    <h2>User login</h2>
+    <h2>Welcome Back</h2>
     <hr />
     <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
     <div class="form-floating mb-3">
@@ -30,17 +30,7 @@
     <div>
         <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
     </div>
-    <div>
-        <p>
-            <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-        </p>
-        <p>
-            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-        </p>
-        <p>
-            <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-        </p>
-    </div>
+    
 </form>
 
 
